PROD/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vida-ui-deployment
  namespace: vida-prod
spec:
  replicas: 4
  selector:
    matchLabels:
      app: vida-ui
  template:
    metadata:
      labels:
        app: vida-ui
    spec:
      containers:
      - name: vida-ui-container 
        image: vinul16/vida-prod-image:latest
        ports:
        - containerPort: 80
      imagePullSecrets: 
      - name: regcred
