PROD/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vida-ui-service
  namespace: vida-prod
spec:
  selector:
    app: vida-ui
  ports:
    - port: 8080      #exporce port
      targetPort: 80  #container port
