PROD/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: vida-prod
  name: vida-ui-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vidaprod.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vida-ui-service
            port:
              number: 8080
